@@ -1,6 +1,8 @@
 2003-04-07	ujwal
 
     * Fixed a namespace collision bug in PTYTask.
+    
+    * Fixed linewrap bug in VT100Screen.
 
 2003-04-05	ujwal
 
